--- a/app/assets/stylesheets/_nav_drawer.scss
+++ b/app/assets/stylesheets/_nav_drawer.scss
@@ -77,7 +77,7 @@ $drawer-side-padding: 1rem;
     left: 0;
     position: absolute;
     left: 100%;
-    padding: 1rem $drawer-side-padding 0;
+    padding: 0rem $drawer-side-padding 0;
     top: 0;
     bottom: 0;
     width: 100%;
